fixing the visibility at mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -255,3 +255,8 @@ body {
 .launch-logo { position: relative; z-index: 6; }
 
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
